# memoria

./: .SRCINFO  PKGBUILD  README.md  config.example.toml
memoria-daemon/: Cargo.toml  memoria-daemon.service
memoria-ui/: CMakeLists.txt
memoria-ui/qml/: main.qml
