[package]
name = "memoria-daemon"
version = "1.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
dirs = "5"
rusqlite = { version = "0.31", features = ["chrono"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net", "signal", "time", "process", "io-util"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
libc = "0.2"
sha2 = "0.10"
image = "0.24"
hex = "0.4"

[profile.release]
strip = true
lto = true
codegen-units = 1
